--- a/package.json
+++ b/package.json
@@ -3,9 +3,28 @@
   "version": "1.1.4",
   "description": "Telegrambo is a simple library for interacting with the Telegram Bot API",
   "type": "module",
-  "main": "./index.js",
+  "main": "./dist/telegrambo.node.cjs.js",
+  "module": "./dist/telegrambo.node.es.js",
+  "browser": "./dist/telegrambo.browser.umd.js",
+  "files": [
+    "dist",
+    "src"
+  ],
+  "exports": {
+    ".": {
+      "import": "./dist/telegrambo.node.es.js",
+      "require": "./dist/telegrambo.node.cjs.js"
+    },
+    "./browser": {
+      "import": "./dist/telegrambo.browser.es.js",
+      "require": "./dist/telegrambo.browser.umd.js"
+    }
+  },
   "scripts": {
-    "test": "node test/run.js"
+    "test": "cross-env NODE_OPTIONS=--experimental-vm-modules jest",
+    "build:node": "vite build --config vite.config.node.js",
+    "build:browser": "vite build --config vite.config.browser.js",
+    "build": "pnpm build:node && pnpm build:browser"
   },
   "repository": {
     "type": "git",
@@ -16,5 +35,10 @@
   "bugs": {
     "url": "https://github.com/HeadMad/Telegrambo/issues"
   },
-  "homepage": "https://github.com/HeadMad/Telegrambo#readme"
+  "homepage": "https://github.com/HeadMad/Telegrambo#readme",
+  "devDependencies": {
+    "vite": "^7.2.6",
+    "jest": "^29.7.0",
+    "cross-env": "^7.0.3"
+  }
 }
